<resources>
    <string name="app_name">Health Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_medical_histoty">Add Medical Histoty</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="home_fragment">home_fragment</string>
    <string name="add_medical_history">Add Medical History</string>
    <string name="child_care">Child Care</string>
    <string name="treat_common_ache">Treat Common Ache</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_language">Change Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medical_history_d">Medical History</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="medical_status">Medical Status</string>
    <string name="hospital">Hospital</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="card_number">Card Number</string>
    <string name="checkup_date">CheckUp Date</string>
    <string name="medical_history">Medical History</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="about_us">About Us</string>

</resources>
