<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"


>
    <data>

        <variable
                name="viewmodel"
                type="com.example.healthcareet.data.MedicalViewModelSolution"/>
    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.healthcareet.ChildFragment">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:orientation="vertical">
                <TextView
                        android:text="Medical History"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="200dp"
                        android:id="@+id/textView7"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="28dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:fontFamily="@font/quicksand_bold" android:textColor="@color/colorPrimaryDark"/>
                <com.google.android.material.button.MaterialButton
                        android:text="search"
                        android:layout_width="100dp"
                        android:onClick="search"

                        android:layout_height="wrap_content"
                        android:id="@+id/search_button"
                app:cornerRadius="20dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/first_name"
                        android:id="@+id/search_firstn"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/first_name"

                        android:layout_marginBottom="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/firstN"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/last_name"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lastN"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/age"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ageN"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/sex"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sexT"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                        android:text="Medical Status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView14" android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="120dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorPrimaryDark" android:fontFamily="@font/quicksand_bold"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hospital"

                        android:layout_marginBottom="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/hospitalN"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/doctor_name"

                        android:layout_marginBottom="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/doctorN"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/card_number"

                        android:layout_marginBottom="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cardN"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/checkup_date"

                        android:layout_marginBottom="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkD"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/medical_history"

                        android:layout_marginBottom="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/historyS"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                        android:text="Save"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:id="@+id/save_button"
                app:cornerRadius="20dp"/>
                <com.google.android.material.button.MaterialButton
                        android:text="Update"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content" android:id="@+id/update_button"
                app:cornerRadius="20dp"/>
                <com.google.android.material.button.MaterialButton
                        android:text="Delete"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content" android:id="@+id/delete_button"
                app:cornerRadius="20dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>