<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"


>
<FrameLayout
        android:layout_width="match_parent"
             android:layout_height="match_parent"
        tools:context="com.example.healthcareet.HomeFragment"
             android:id="@+id/main_frame">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



    <com.google.android.material.button.MaterialButton
            android:layout_width="143dp"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_medical_history"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_create_black_24dp"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/add_button"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.511" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6" app:layout_constraintVertical_bias="1.0"/>
        <com.google.android.material.button.MaterialButton
                android:layout_width="138dp"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/child_care"
                app:cornerRadius="30dp"
                app:icon="@drawable/ic_child_care_black_24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/child_button"
                android:layout_marginTop="160dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6" app:layout_constraintVertical_bias="0.974"
                app:layout_constraintHorizontal_bias="0.509"/>
    <com.google.android.material.button.MaterialButton
            android:layout_width="144dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/treat_common_ache"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_local_hospital_black_24dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/treat_button" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.23"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.523"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="141dp"
                android:layout_height="91dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/contact_us"
                app:cornerRadius="30dp"
                app:icon="@drawable/ic_contact_mail_black_24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.231" app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintHorizontal_bias="0.538"
                android:id="@+id/contactus_button"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="202dp" android:id="@+id/guideline5"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="291dp" android:id="@+id/guideline6"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>